# hyrum

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  KNOWN_FAILURES.md  Makefile  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: check-conventional-pr-title.py  dependabot.yaml  zizmor.yaml  zizmor.yml
.github/sbom/: pyproject.toml
.github/workflows/: ci.yaml  dependency-review.yaml  publish-test-pypi.yaml  publish.yaml  security.yaml  update-charm-list.yaml  validate-pr-title.yaml  zizmor.yaml
charm-list/: charms-no-source.csv  charms.csv
src/hyrum/: __init__.py  __main__.py  _ansi.py  _cli.py  _compare.py  _config.py  _get_charms.py  _pool.py  _report.py  _results.py  _summary.py  _version.py  cli.py  config.py  enumerate.py  filters.py  frameworks.py  get_charms.py  pool.py  python_version.py  report.py
src/hyrum/_patchers/: __init__.py  _common.py  base.py  charmlib_source.py  generic.py  ops_source.py  vendored_lib.py
src/hyrum/_runners/: __init__.py  _detect.py  base.py  detect.py  make_runner.py  tox.py
src/hyrum/patchers/: __init__.py  base.py  charmlib_source.py  ops_source.py
src/hyrum/runners/: base.py  detect.py  make_runner.py  tox.py
src/super_tox/: __init__.py  __main__.py  cli.py  config.py  enumerate.py  filters.py  frameworks.py  pool.py  report.py
src/super_tox/patchers/: __init__.py  base.py  ops_source.py
src/super_tox/runners/: __init__.py  base.py  detect.py  make_runner.py  tox.py
tests/: conftest.py  test_cli.py  test_compare.py  test_config.py  test_discover_launchpad_charms.py  test_enumerate.py  test_filters.py  test_frameworks.py  test_generic_patcher.py  test_get_charms.py  test_patchers.py  test_pool.py  test_report.py  test_results.py  test_runners.py  test_smoke.py  test_summary.py  test_update_charm_list.py  test_vendored_lib_patcher.py
tools/: __init__.py  discover_github_charms.py  discover_launchpad_charms.py  get_charms.py  merge_candidates.py  update_charm_list.py
