[project]
name = "hyrum"
version = "0.0.0"
description = "Placeholder release — real project coming soon."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Canonical Charm Tech" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
]
dependencies = []

[project.scripts]
hyrum = "hyrum.cli:main"

[project.urls]
Homepage = "https://github.com/canonical/hyrum"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyrum"]
