[project]
name = "hyrum"
version = "1.0.0a1"
description = "Bulk-run checks across many charm repositories with a dependency swapped out."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Canonical Charm Tech" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "packaging>=24.0",
]

[project.scripts]
hyrum = "hyrum._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyrum"]

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735). Split by purpose so CI jobs install only what
# they need; `[tool.uv] default-groups` below makes `uv run` install both for
# local Makefile use.
# ---------------------------------------------------------------------------
[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "codespell>=2.2",
    "zizmor>=1.26",
    "pyright>=1.1.411",
]
unit = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "coverage>=7.14.3",
]

[tool.uv]
default-groups = ["lint", "unit"]

# ---------------------------------------------------------------------------
# Tooling config — copied from canonical/charm-tech python/pyproject-snippets.toml
# (in-flight on PR #2). Keep in sync with the upstream snippet when it lands.
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = ".git,.tox,.venv,venv,build,dist,docs/_build,*.lock"
quiet-level = 3
check-hidden = true

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = "error"
stubPath = ""
# Strict mode in tests is impractical without significant pytest/fixture
# annotation work; scope strict checking to src/ for the initial cut and
# rely on pytest itself to catch test regressions.
include = ["src"]
# The patcher reads pyproject.toml / requirements files which arrive as
# nested dynamically-typed mappings (tomllib returns dict[str, Any], and the
# Any infects every chained .get()). Relaxing the "unknown*" family keeps the
# genuine strict signals (return types, missing args, deprecated APIs) while
# accepting that TOML-shaped data is dynamic by definition.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # Pycodestyle errors
    "W",     # Pycodestyle warnings
    "I001",  # isort
    "N",     # pep8-naming
    "A",     # flake8-builtins
    "CPY",   # flake8-copyright
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific
    "PERF",  # Perflint
    "D",     # pydocstyle
    "FA",    # flake8-future-annotations
    "TC",    # flake8-type-checking
]
ignore = [
    "TC001",  # Move application import into a type-checking block
    "TC002",  # Move third-party import into a type-checking block
    "TC003",  # Move standard library import into a type-checking block
    "S101",   # Use of `assert` detected
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in `__init__`
    "CPY001", # Missing copyright notice at top of file
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
# Promote warnings to errors so deprecations and resource-cleanup bugs surface
# in CI rather than leaking into the charm baselines hyrum produces.
filterwarnings = ["error"]
